@@ -24,9 +24,9 @@
 #                   of the catalina startup java process, when start (fork) is
 #                   used
 # -----------------------------------------------------------------------------
-
-export MYCOLLAB_OPTS="-Xms3000m -Xmx3000m -XX:NewSize=512m -XX:MaxPermSize=256m -XX:+DisableExplicitGC"
 export MYCOLLAB_PORT=8080
+export PROCESS_PORT=12345
+export STOP_KEY=mycollab
 
 # OS specific support.  $var _must_ be set to either true or false.
 cygwin=false
@@ -55,12 +55,13 @@ done
 PRGDIR=`dirname "$PRG"`
 
 # Only set MYCOLLAB_HOME if not already set
-[ -z "$MYCOLLAB_HOME" ] && MYCOLLAB_HOME=`cd "$PRGDIR" >/dev/null; pwd`
+[ -z "$MYCOLLAB_HOME" ] && MYCOLLAB_HOME=`cd "$PRGDIR/.." >/dev/null; pwd`
 
 if [ -z "$MYCOLLAB_OUT" ] ; then
   MYCOLLAB_OUT="$MYCOLLAB_HOME"/logs/mycollab.out
 fi
 
+echo $MYCOLLAB_HOME
 echo Log $MYCOLLAB_OUT
 
 # For Cygwin, ensure paths are in UNIX format before anything is touched
@@ -98,7 +99,7 @@ if [ -z "$JAVA_HOME" ] ; then
   _RUNJAVA=java
 else
   _RUNJAVA="$JAVA_HOME"/bin/java
-fi  
+fi
 
 # ----- Execute The Requested Command -----------------------------------------
 
@@ -108,15 +109,15 @@ if [ $have_tty -eq 1 ]; then
   if [ "$1" = "debug" ] ; then
     echo "Using JAVA_HOME:       $JAVA_HOME"
   fi
-  
+
   if [ ! -z "$MYCOLLAB_PID" ]; then
     echo "Using MYCOLLAB_PID:    $MYCOLLAB_PID"
   fi
 fi
 
+echo Param "$1"
 
-
-if [ "$1" = "start" ] ; then
+if [ "$1" = "--start" ] ; then
 
   if [ ! -z "$MYCOLLAB_PID" ]; then
     if [ -f "$MYCOLLAB_PID" ]; then
@@ -158,15 +159,15 @@ if [ "$1" = "start" ] ; then
 
   shift
   touch "$MYCOLLAB_OUT"
-  eval \"$_RUNJAVA\" $MYCOLLAB_OPTS \
-      -jar runner.jar --port $MYCOLLAB_PORT --stop-port 8079 --stop-key esoftheadsecretkey  
+  cd ..
+  eval \"$_RUNJAVA\" -jar $MYCOLLAB_HOME/executor.jar --port $MYCOLLAB_PORT --process-port $PROCESS_PORT --stop-key $STOP_KEY
  ####>> "$MYCOLLAB_OUT" 2>&1 "&"
 
   if [ ! -z "$MYCOLLAB_PID" ]; then
     echo $! > "$MYCOLLAB_PID"
   fi
 
-elif [ "$1" = "stop" ] ; then
+elif [ "$1" = "--stop" ] ; then
 
   shift
 
@@ -202,7 +203,8 @@ elif [ "$1" = "stop" ] ; then
     fi
   fi
 
-  eval \"$_RUNJAVA\" -jar runner.jar  --stop-port 8079 --stop-key esoftheadsecretkey --stop 
+  cd ..
+  eval \"$_RUNJAVA\" -jar $MYCOLLAB_HOME/executor.jar --port $MYCOLLAB_PORT --process-port $PROCESS_PORT --stop-key $STOP_KEY --stop
 
   if [ ! -z "$MYCOLLAB_PID" ]; then
     if [ -f "$MYCOLLAB_PID" ]; then
